# pellad-international-native

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  build_msvc.bat  get_windows_dependencies.bat  main.c
include/glad/: glad.c  glad.h
shaders/: texture.frag  texture.vert
